# sqlmodel-ext

./: README.md  README_zh.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
docs/.vitepress/: config.mts  en.mts  zh.mts
docs/.vitepress/theme/: index.ts
docs/en/: index.md
docs/en/explanation/: cached-table.md  cascade-delete-semantics.md  crud-pipeline.md  index.md  metaclass.md  optimistic-lock.md  polymorphic-internals.md  prerequisites.md  (+2 more)
docs/explanation/: cached-table.md  cascade-delete-semantics.md  crud-pipeline.md  index.md  metaclass.md  optimistic-lock.md  polymorphic-internals.md  prerequisites.md  relation-load-checker.md  relation-preload.md
docs/guide/: cached-table.md  crud.md  field-types.md  index.md  optimistic-lock.md  pagination.md  polymorphic.md  relation-load-checker.md  relation-preload.md
docs/how-to/: cache-queries.md  configure-cascade-delete.md  define-jti-models.md  define-sti-models.md  handle-concurrent-updates.md  index.md  integrate-with-fastapi.md  paginate-a-list-endpoint.md  prevent-missing-greenlet.md  release-connection-during-long-io.md
docs/internals/: cached-table.md  crud.md  index.md  metaclass.md  optimistic-lock.md  polymorphic.md  prerequisites.md  relation-load-checker.md  relation-preload.md
docs/reference/: base-classes.md  crud-methods.md  decorators.md  field-types.md  index.md  mixins.md  pagination-types.md
docs/tutorials/: 01-getting-started.md  02-building-a-blog-api.md  03-adding-redis-cache.md  index.md
examples/consumer_integration/: run.py
src/sqlmodel_ext/: __init__.py  _compat.py  _sa_type.py  _utils.py  base.py  pagination.py  relation_load_checker.py
tests/: _models.py  conftest.py  test_basic_crud.py  test_smoke_imports.py  test_sti_default_isolation.py
(+45 files in other folders)
