[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlmodel-ext"
version = "0.3.1"
description = "Extended SQLModel infrastructure: smart metaclass, async CRUD mixins, polymorphic inheritance, optimistic locking, relation preloading, and reusable field types."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Foxerine" },
]
keywords = ["sqlmodel", "sqlalchemy", "pydantic", "async", "crud", "orm", "polymorphic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "sqlmodel>=0.0.22",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100.0"]
cache = ["redis>=5.0", "orjson>=3.0"]
postgresql = ["orjson>=3.0"]
pgvector = [
    "sqlmodel-ext[postgresql]",
    "numpy>=1.24",
    "pgvector>=0.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/Foxerine/sqlmodel-ext"
Repository = "https://github.com/Foxerine/sqlmodel-ext"
Issues = "https://github.com/Foxerine/sqlmodel-ext/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sqlmodel_ext"]
